# GitGo

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  gitgo.spec  install.bat  install.ps1  install.sh  pr_details.md  pyproject.toml  uninstall.bat
.agents/workflows/: commit-content.md
.chronotab/: 2026-03-18.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: publish.yml  release.yml  tests.yml
__doc-templates/: CHANGELOG.md  CONTRIBUTING.md  README.md  SETUP.md
docs/: first-contribution.md  login-guide.md  troubleshooting.md
gitgo/: gitgo.py
installer/linux-installer/: install.sh  uninstall.sh
installer/windows-installer/: install.bat  uninstall.bat
src/: gitgo.bat  gitgo.py
src/auth/: account.py  manager.py  ssh_utils.py
src/commands/: clean.py  git_operations.py  path_manager.py  state.py
src/pygitgo/: exceptions.py  main.py
src/pygitgo/auth/: account.py  manager.py  ssh_utils.py
src/pygitgo/commands/: clean.py  commit.py  config.py  git_branch.py  git_core.py  git_operations.py  git_remote.py  init.py  jump.py  link.py  log.py  new.py  pull.py  push.py  repo.py  resolve.py  staging.py  stash.py  sync.py  (+5 more)
src/utils/: colors.py  executor.py  platform_utils.py
tests/: conftest.py  test_account.py  test_banner.py  test_bootstrap.py  test_clean.py  test_cli_io.py  test_colors.py  test_commit.py  test_config.py  test_config_command.py  test_config_utils.py  test_executor.py  test_git.py  test_git_branch.py  test_git_core.py  test_git_operations.py  test_git_remote.py  test_init.py  test_integration_git.py  test_jump.py  test_link.py  test_log.py  test_main.py  test_manager.py  test_new.py  test_platform.py  test_pull.py  test_push.py  test_repo.py  test_resolve.py  test_setup.py  test_ssh_url_validator.py  test_ssh_utils.py  test_staging.py  test_stash.py  test_stash_operation.py  test_state.py  test_sync.py  test_undo.py  test_update_checker.py  (+3 more)
(+11 files in other folders)
